<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="8dp"/>

    <!-- TODO: rework text -->
    <TextView
        android:id="@+id/dialogGameExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_explanation"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp"/>

    <Button
        android:id="@+id/dialogCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_gravity="end"
        android:backgroundTint="@color/dull_red"
        android:paddingTop="12dp" />

</LinearLayout>
