<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/footer_panel">

        <TextView
            android:id="@+id/start_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/start_title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!-- Add Logo -->

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />

        <!-- Buttons for the extension -->
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_one_player"
                android:layout_width="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_player" />

            <Button
                android:id="@+id/button_two_player"
                android:layout_width="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_player" />

        </LinearLayout>
        -->
        <EditText
            android:id="@+id/input_player_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="Player 1"
            android:textSize="28sp" />

        <!-- Layout for the extension -->
        <!--
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="28sp"
            android:hint="Player 2"/>

        <TextView
            android:id="@+id/start_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/start_difficulty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_difficulty_normal"
                android:layout_width="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficulty_normal" />

            <Button
                android:id="@+id/button_difficulty_hard"
                android:layout_width="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficulty_hard" />

        </LinearLayout>
        -->
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/start_button"
            android:textSize="40sp"
            android:backgroundTint="@color/dark_red"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/dark_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/dull_red"
            android:text="@string/how_to_play"/>

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Info Button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>